💄 change overflow-x: scroll to auto to prevent bugs on edge and firefox

--- a/frontend/scss/components/organisms/sampler.scss
+++ b/frontend/scss/components/organisms/sampler.scss
@@ -10,7 +10,7 @@
 
 .#{utility('sampler')} {
   margin-bottom: 7em;
-  
+
   @media screen and (min-width: 768px) {
     margin-bottom: 8vw;
   }
@@ -19,7 +19,7 @@
     grid-column: 3 / 13;
     padding: 0 20px;
     margin-bottom: 1.5em;
-    
+
     @media screen and (min-width: 768px) {
       padding-left: 20px;
       margin-bottom: 3em;
@@ -31,12 +31,12 @@
 
     &-center {
       grid-column: 6 / 20;
-      
+
       h2 {
         @include hl-lrg;
         margin: 0;
       }
-      
+
       .#{atom('ico')} {
         @include ico-4;
         margin: 0 auto 0.5em;
@@ -49,38 +49,38 @@
   grid-column: 3 / -1;
   width: 100%;
   padding-left: 20px;
-  
+
   @media screen and (min-width: 1680px) {
     grid-column: 5 /  -1;
     padding-left: 0;
   }
-  
+
   &-tab-bar {
     display: flex;
     flex-wrap: nowrap;
     scroll-snap-type: x mandatory;
     overflow-y: hidden;
-    overflow-x: scroll;
+    overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     white-space: nowrap;
     background: color('ebony-clay');
   }
-  
+
   &-tab {
     scroll-snap-align: start;
     cursor: pointer;
     padding: 1.125em 1.75em;
     border-right: 1px solid color('bright-gray');
     background: color('ebony-clay');
-    
+
     &.active {
       background: color('bright-gray');
-      
+
       span {
         opacity: 1;
       }
     }
-    
+
     &-title {
       @include txt-3;
       @include txt-font-accent;
@@ -88,14 +88,14 @@
       opacity: 0.5;
     }
   }
-  
+
   &-iframe {
     width: 100%;
     height: auto;
     background: color('bright-gray');
     box-shadow: 0 15px 50px 0 rgba(0, 0, 0, 0.4);
   }
-  
+
   &-link {
     margin-top: 1em;
     display: inline-block;
